--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico>
+    <link rel=icon href=/dist/favicon.ico>
     <title>coloradomormonchorale</title>
     <link as=style href=/dist/css/app.634a6ef3.css rel=preload>
     <link as=script href=/dist/js/app.e65c5052.js rel=preload>
