--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/dist/favicon.ico>
+    <link rel=icon href=dist/favicon.ico>
     <title>coloradomormonchorale</title>
     <link as=style href=dist/css/app.634a6ef3.css rel=preload>
-    <link as=script href=dist/js/app.e65c5052.js rel=preload>
+    <link as=script href=dist/js/app.5b1ed33a.js rel=preload>
     <link as=script href=dist/js/chunk-vendors.d0b18381.js rel=preload>
-    <link href=dist/css/app.634a6ef3.css rel=stylesheet>
+    <link href=/css/app.634a6ef3.css rel=stylesheet>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     </noscript>
     <div id=app></div>
     <script src=dist/js/chunk-vendors.d0b18381.js></script>
-    <script src=dist/js/app.e65c5052.js></script>
+    <script src=dist/js/app.5b1ed33a.js></script>
 </body>
 
 </html>
