--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link as=style href=dist/css/app.634a6ef3.css rel=preload>
     <link as=script href=dist/js/app.5b1ed33a.js rel=preload>
     <link as=script href=dist/js/chunk-vendors.d0b18381.js rel=preload>
-    <link href=/css/app.634a6ef3.css rel=stylesheet>
+    <link href=dist/css/app.634a6ef3.css rel=stylesheet>
 </head>
 
 <body>
